# website-project

./: Makefile  README.md  config.yml  notes.txt  pyproject.toml
.db/: _database.json
website_project/: main.py
website_project/activity/: activities.py  base.py
website_project/activity/description_fields/: __init__.py  base.py  date.py  number.py  text.py
website_project/database/: engine.py
website_project/templates/: activity-form.html  base.html  welcome.html
